# QRnew

./: .gitignore  Cargo.toml  README.md  justfile  macOS-compat.md
.github/workflows/: build.yml  release.yml
i18n/en/: qrnew.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs
