[package]
name = "qrnew"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Local-only QR code generator"
repository = "https://github.com/lhdjung/QRnew"

[dependencies]
arboard = "3"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
image = { version = "0.24", default-features = false, features = ["png"] }
open = "5.3.2"
qrcode = { version = "0.13", features = ["svg"] }
rfd = "0.15"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "about",
    "markdown",
    "qr_code",
    "wgpu",
    "winit",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
